--- a/pom.xml
+++ b/pom.xml
@@ -104,5 +104,12 @@
             <artifactId>jstl</artifactId>
             <version>1.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>hu.paalgyula</groupId>
+            <artifactId>gravatar-taglib</artifactId>
+            <version>0.1.4</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 </project>
