--- a/pom.xml
+++ b/pom.xml
@@ -111,5 +111,11 @@
             <version>0.1.4</version>
             <type>jar</type>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.4</version>
+        </dependency>
     </dependencies>
 </project>
